# fast-float-compare

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: float_comparison.rs
src/: lib.rs  main.rs
