[package]
name = "fast-float-compare"
version = "0.1.1"
edition = "2021"
description = "A lightweight benchmark comparing minimal float comparison implementation against rust_decimal"
license = "MIT"
repository = "https://github.com/KhaledYassin/fast-float-compare"
keywords = [
    "floating-point",
    "comparison",
    "benchmark",
    "decimal",
    "performance",
]
categories = ["mathematics", "algorithms", "development-tools::profiling"]


[dev-dependencies]
rust_decimal = "1.34"
criterion = "0.5"
rand = "0.8"
ordered-float = "4.6.0"

[[bench]]
name = "float_comparison"
harness = false
